--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 variables:
   DOCKER_HUB_IMAGE: ${DOCKER_HUB_USER}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
   GITLAB_IMAGE: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_NAME}
+  BUILDX_PLATFORM: linux/amd64,linux/arm/v7,linux/arm64/v8
 
 before_script:
   - docker login --username ${DOCKER_HUB_USER} --password ${DOCKER_HUB_PASSWORD}
@@ -23,4 +24,4 @@ build-and-push:
     - docker context create tls-environment
     - docker buildx create --name multiarch-builder --use tls-environment
     - docker buildx inspect --bootstrap
-    - docker buildx build --build-arg BYTEBIN_URL=${BYTEBIN_URL} --pull --push --platform linux/amd64,linux/arm/v7,linux/arm64/v8 --tag ${DOCKER_HUB_IMAGE} --tag ${GITLAB_IMAGE} .
+    - docker buildx build --build-arg BYTEBIN_URL=${BYTEBIN_URL} --pull --push --platform ${BUILDX_PLATFORM} --tag ${DOCKER_HUB_IMAGE} --tag ${GITLAB_IMAGE} .
